tests/NormalTests/paczka1/fuzzy1/49403392.err
Error in line 1: ZqqJUX A56 90,1
Error in line 4: GfJ5BjI A978 87,1
Error in line 6: A5 A978 9,8
Error in line 9: A5 A978 7,6
Error in line 12: A5 A56 64,1
Error in line 2: a8v5BjdXwY A978 25,6
Error in line 14: a8v5BjdXwY A5 41,7
Error in line 23: A5 A56 267,3
Error in line 24: A5 A978 29,5
Error in line 25: A5 A978 563,9
Error in line 35: A5 A978 751,0
Error in line 36: A5 S25 82,6
Error in line 37: A5 S25 410,5
Error in line 17: ZqqJUX A5 30,5
